fixed button spacing issue

--- a/src/components/EatOutCard/eatOutCard.scss
+++ b/src/components/EatOutCard/eatOutCard.scss
@@ -5,7 +5,7 @@
     box-shadow: $card-shadow;
     display: flex;
     flex-direction: column;
-    height: 45rem;
+    height: 44.7rem;
     justify-content: space-between;
     max-width: 39.5rem;
     min-width: 33rem;
